old_tests/parser/invalid/010-two-operands.man
def main()
    print(foo bar)
end
